[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crysanalyze"
version = "0.1.0"
description = "A CLI tool for rapid preliminary analysis of powder XRD data"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "click>=8.0.0",
    "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=21.7b0",
    "flake8>=3.9.2",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/yourusername/crysanalyze"
Documentation = "https://github.com/yourusername/crysanalyze#readme"
Repository = "https://github.com/yourusername/crysanalyze.git"
Issues = "https://github.com/yourusername/crysanalyze/issues"

[project.scripts]
crysanalyze = "crysanalyze.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 